--- a/eccs2-debian.conf
+++ b/eccs2-debian.conf
@@ -1,13 +1,13 @@
 <IfModule mod_alias.c>
-    Alias /eccs2 /opt/eccs2/web
-    Alias /eccs2html /opt/eccs2/html
+    Alias /eccs2 /home/<USER>/eccs2/web
+    Alias /eccs2html /home/<USER>/eccs2/html
 
-    <Directory /opt/eccs2/web>
+    <Directory /home/<USER>/eccs2/web>
        DirectoryIndex index.php
        Require all granted
     </Directory>
 
-    <Directory /opt/eccs2/html>
+    <Directory /home/<USER>/eccs2/html>
        Require all granted
     </Directory>
 </IfModule>
